css/main.css
@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css);
@import url(../css/leaflet.css);

body {
	background-color: cadetblue;
	overflow-x: hidden;
}

#appName {
	font-family: 'Lobster', cursive;
	font-size: 3em;
	text-align: center;
	color: white;
/*	background-image: url('../img/bumbershoot_BG.jpg');
	background-repeat: no-repeat;*/
    background-size: 100% 100%;
}

#appDescribe, #resultsDiv h2 , #searchForm{
	color: white;
	text-align: center;
	font-variant: small-caps;
	font-style: italic;
}

#searchForm {
	padding: 1em;
	text-align: left;
	font-size: 16px;
}

#skLogo {
	position:absolute;
	height: 20px;
	top: 0;
	right: 0;
}

#map-container {
    height: 75vh;
}

#header {
	min-height: 150px;
}

.eventTitle {
	font-family: helvetica, sans-serif;
	font-size: 25px;
}

#footer {
	width: 100vw;
	font-size: 12px;
	color: white;
	padding: 1em;
	background-color: rgba(0, 0, 0, .4);
	border-top: 2px solid white;
	overflow: hidden;
	font-variant: small-caps;
}

#createdBy {
	display: inline;
	margin: 0;
	padding: 0;
}

#apiCredit {
	float: right;
	display: inline;
	margin: 0;
	padding: 0;
}

::-webkit-scrollbar {
	width: 10px;
}

::-webkit-scrollbar-track {
	background-color: cadetblue;
	border-radius: 10px;
}

::-webkit-scrollbar-thumb {
	border-radius: 10px;
	background-color: white;
}

::-webkit-scrollbar-corner {
	background-color: cadetblue;
}

#resultsList {
	height: 85vh;
	overflow: scroll;
	padding: 0;
	margin: 0;
}

.resultElement {
	list-style: none;
	background-color: rgba(255, 255, 255, .7);
	border-radius: 5px;
	padding: 1em;
	margin: .5em 1em;
}

.resultElement:hover {
	cursor: pointer;
	background-color: rgba(0, 0, 0, .3);
	color: white;
}

@media screen and (min-width: 768px) {

	#resultsDiv {
		width: 25vw;
		min-height: 90vh;
		float: left;
	}

	#map-container {
		min-height: 100vh;
	}

	#appName {
		font-size: 6em;
	}

	#appDescribe {
		font-size: 2em;
	}

	#skLogo {
		height: 30px;
	}

	footer {
		font-size: 16px;
	}

}
.image {
	height: 100px;
	width: 100px;
}

.cover {
	margin-top: 2em;
	margin-right: 3em;
	max-width: 100px;
    width: 100px;
    height: 100px;
    display: inline-block;
    background-size: cover;
}
.cover:hover {
    cursor: pointer;
}
.cover.playing {
    border: 5px solid #e45343;
}

.btn {
	font-weight: bold;
}

#listen {
	color: #fff;
    background-color: #2ebd59;
    font-weight: 550;
    font-family: Circular,Helvetica,Arial,sans-serif;
    font-size: 18px;
    line-height: 1.5;
    border-radius: 500px;
    padding: 10px 40px 6px;
    border-width: 0;
    letter-spacing: 1.2px;
    min-width: 130px;
    text-transform: uppercase;
    white-space: normal;
}

.description {
	padding-left: 1em;
}

#music-text {
	margin:5px 0;
	padding-left: 2em;
	padding-right: 5em;
}

